<resources>
    <string name="app_name">MyFilmList</string>
    <string name="title">Título</string>
    <string name="rating">Nota</string>
    <string name="password">Contraseña</string>
    <string name="enter">Entrar</string>
    <string name="empty">E-mail y contraseña no pueden estar vacíos</string>
    <string name="description">Descripción</string>
    <string name="year">Año de publicación</string>
    <string name="img_url">URL de la imagen</string>
    <string name="comment">Comentario</string>
    <string name="email">Email</string>
    <string name="hint_email">Introduce el email</string>
    <string name="hint_pass">Introduce la contraseña</string>
    <string name="films_url">https://www.abc.es/play/cine/peliculas/</string>
    <string name="title_hint">Escribe el título</string>
    <string name="description_hint">Escribe la descripción</string>
    <string name="rating_hint">Escribe la nota (0-5)</string>
    <string name="img_url_hint">Escribe la url de la imagen</string>
    <string name="year_hint">Escribe el año de publicación</string>
    <string name="add">Añadir</string>
    <string name="empty_field">Este campo no puede estar vacío</string>
    <string name="rating_range">La nota debe estar comprendida entre 0 y 5</string>
    <string name="delete">Borrar</string>
    <string name="error">Hubo un error :(</string>
</resources>
